2015-01-08  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/64462
	* g++.dg/cpp0x/constexpr-64462.C: New.

2015-01-08  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/60753
	* g++.dg/cpp0x/deleted10.C: New.

2015-01-07  David Malcolm  <dmalcolm@redhat.com>

	* jit.dg/test-error-dereferencing-void-ptr.c: New test case.

2015-01-07  David Malcolm  <dmalcolm@redhat.com>

	* jit.dg/test-expressions.c (make_tests_of_unary_ops): Add test of
	GCC_JIT_UNARY_OP_ABS.
	(verify_unary_ops): Likewise.

2015-01-07  David Malcolm  <dmalcolm@redhat.com>

	* jit.dg/test-arith-overflow.c: New test case.
	* jit.dg/all-non-failing-tests.h: Add test-arith-overflow.c.
	* jit.dg/test-combination.c (create_code): Likewise.
	(verify_code): Likewise.
	* jit.dg/test-threads.c (testcases): Likewise.

2015-01-07  David Malcolm  <dmalcolm@redhat.com>

	* jit.dg/jit.exp: Load wrapper.exp with %{tool} set to "g++"
	rather than "jit".  Load g++.exp, and call g++_init.
	Run test-*.cc files within the testsuite and *.cc files within
	docs/examples.
	(jit-dg-test): Drop the addition of -fgnu89-inline to
	DEFAULT_CFLAGS in favor of adding it to additional_flags, only
	doing it when compiling C testcases (since g++ does not handle
	it).  Reset "orig_environment_saved" so that LD_LIBRARY_PATH
	is restored to the value after g++_init ran, rather than the
	value before g++_init ran.  Return a list of
	$comp_output $output_file, as dg-test assumes.

2015-01-07  David Malcolm  <dmalcolm@redhat.com>

	* jit.dg/harness.h (CHECK_NON_NULL): Add __func__ to output, to
	make it easier to figure out the origin of each test result when
	running test-combination.c and test-threads.c.
	(CHECK_VALUE): Likewise.
	(CHECK_DOUBLE_VALUE): Likewise.
	(CHECK_STRING_VALUE): Likewise.
	(CHECK_STRING_STARTS_WITH): Likewise.
	(CHECK_STRING_CONTAINS): Likewise.
	(CHECK): Likewise.
	(check_string_value): Likewise, add "funcname" param.
	(check_string_starts_with): Likewise.
	(check_string_contains): Likewise.
