@@ -1,5 +1,10 @@
 2015-01-08  Paolo Carlini  <paolo.carlini@oracle.com>
 
+	PR c++/59004
+	* g++.dg/ext/fnname4.C: New.
+
+2015-01-08  Paolo Carlini  <paolo.carlini@oracle.com>
+
 	PR c++/64462
 	* g++.dg/cpp0x/constexpr-64462.C: New.
 
